# event-extractor

./: .env.example  .gitignore  CHANGES.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  run-web.bat  serve.py
.github/workflows/: ci.yml
docs/: youtube-timeline-roadmap.md
scripts/: run-web.ps1  stop-web.ps1
src/event_timeline_extractor/: artifacts.py  chunking.py  cli.py  config.py  fetch.py  ffmpeg_tools.py  jobs.py  pipeline.py  postprocess.py  resilience.py  schema.py  timefmt.py  validation.py
src/event_timeline_extractor/llm/: __init__.py  openrouter.py
src/event_timeline_extractor/transcription/: __init__.py  base.py  diarization.py  diarize_pyannote.py  factory.py  faster_whisper_backend.py  groq_backend.py  memories_backend.py  stub.py
src/event_timeline_extractor/vision/: memories_s0.py
src/event_timeline_extractor/web/: __init__.py  app.py
src/event_timeline_extractor/web/static/: app.js  index.html  style.css
tests/: conftest.py
tests/integration/: test_cli.py  test_ffmpeg_tools.py  test_frontend_payload_parity.py  test_local_video_middle_segment.py  test_pipeline_artifacts.py  test_pipeline_max_seconds.py  test_pipeline_stub.py  test_pipeline_vision.py  test_web_api.py
tests/unit/: test_chunking.py  test_chunking_speaker_aware.py  test_chunking_vision.py  test_config.py  test_config_vision.py  test_diarization.py  test_fetch.py  test_groq_backend.py  test_memories_backend.py  test_openrouter.py  test_openrouter_vision.py  test_postprocess.py  test_resilience.py  test_timefmt.py  test_validation.py  test_vision_memories_s0.py
